--- a/index.html
+++ b/index.html
@@ -26,10 +26,12 @@
             display: block;
             margin-right: 0;
             flex: 0 0 calc(100% / 5); /* 5 itens em telas grandes */
+            padding: 0 5px; /* Adiciona um pequeno espaçamento entre os cards */
         }
         .card-img-top {
              aspect-ratio: 2 / 3; /* Proporção de pôster */
              object-fit: cover;
+             border-radius: 5px;
         }
         /* Animação da barra de notícias */
         .news-ticker p {
@@ -49,6 +51,28 @@
         @media (max-width: 1200px) { .carousel-item { flex: 0 0 calc(100% / 4); } } /* 4 itens */
         @media (max-width: 992px) { .carousel-item { flex: 0 0 calc(100% / 3); } } /* 3 itens */
         @media (max-width: 768px) { .carousel-item { flex: 0 0 calc(100% / 2); } } /* 2 itens */
+
+
+        /* --- AJUSTE DAS SETAS DO CARROSSEL (NOVO CÓDIGO) --- */
+        .carousel-control-prev,
+        .carousel-control-next {
+            width: 5%; /* Largura da área da seta */
+            opacity: 1;
+        }
+        /* Move a seta para fora da área dos cards */
+        .carousel-control-prev {
+            transform: translateX(-100%);
+        }
+        .carousel-control-next {
+            transform: translateX(100%);
+        }
+        .carousel-control-prev-icon,
+        .carousel-control-next-icon {
+            background-color: rgba(0,0,0,0.5);
+            border-radius: 50%;
+            padding: 20px;
+        }
+
     </style>
 </head>
 <body class="bg-dark text-white">
@@ -83,4 +107,20 @@
                     <div class="carousel-item active"><a href="https://www.perplexity.ai/collections/descricao-da-imagem-jbyWzxcpQdqqWqRYCclwPg" target="_blank"><img src="images/descricao-de-imagem.png" class="card-img-top" alt="DESCRIÇÃO DE IMAGEM"></a></div>
                     <div class="carousel-item"><a href="https://www.perplexity.ai/collections/formatacao-de-formulas-CyFZHBSwQiCgjt4vt6YTVg" target="_blank"><img src="images/formatacao-de-formulas.png" class="card-img-top" alt="Formatação de fórmulas"></a></div>
                     <div class="carousel-item"><a href="#" target="_blank"><img src="images/Minhas-metas.png" class="card-img-top" alt="Minhas Metas"></a></div>
-                    <div class="carousel-item"><a href="#" target="_blank"><img src="
+                    </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselAssistiu" data-bs-slide="prev"><span class="carousel-control-prev-icon"></span></button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselAssistiu" data-bs-slide="next"><span class="carousel-control-next-icon"></span></button>
+            </div>
+        </section>
+
+    </main>
+
+    <div class="news-ticker-container fixed-bottom bg-black p-2 border-top border-danger">
+        <div class="news-ticker">
+             <p>Seja bem-vindo ao DesignerFlix! • Encerramento de módulos: 2026/1: 18 de agosto - 51/2026: 15 de setembro - 52/2026: 17 de novembro •• Prazo final para a entrega do relatório de julho: 05 de agosto.</p>
+        </div>
+    </div>
+    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
