--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
             animation-play-state: paused;
         }
         
-        /* 5. ESTILO DA NOVA LOGO EDTECH (ADICIONADO) */
+        /* 5. ESTILO DA NOVA LOGO EDTECH */
         #edtech-logo {
-            height: 60px; /* Você pode ajustar este valor como preferir */
-            width: auto;  /* Mantém a proporção da imagem automaticamente */
+            height: 60px;
+            width: auto;
         }
     </style>
 </head>
@@ -78,7 +78,7 @@
 
     <header class="container my-4 d-flex justify-content-between align-items-center">
         <h1 class="main-logo-text mb-0">Designerflix</h1>
-        <img src="images/Logo Edtech.png" alt="Logo Edtech" id="edtech-logo">
+        <img src="images/logo-edtech.png" alt="Logo Edtech" id="edtech-logo">
     </header>
 
     <main class="container">
