--- a/index.html
+++ b/index.html
@@ -85,8 +85,9 @@
 
         <section class="mb-5">
             <h2 class="mb-3">Design de Conteúdo</h2>
-            <div id="carouselAjudinha" class="carousel slide" data-bs-ride="carousel">
+            <div id="carouselAjudinha" class="carousel slide">
                 <div class="carousel-inner">
+
                     <div class="carousel-item active">
                         <div class="row row-cols-lg-5 row-cols-md-4 row-cols-sm-3 row-cols-2 g-3">
                             <div class="col"><a href="https://www.perplexity.ai/collections/descricao-da-imagem-jbyWzxcpQdqqWqRYCclwPg" target="_blank"><img src="images/descricao-de-imagens.png" class="card-img-top" alt="DESCRIÇÃO DE IMAGEM"></a></div>
@@ -94,9 +95,15 @@
                             <div class="col"><a href="https://www.perplexity.ai/collections/minhas-metas-KTFH54OjRRG4E5rEjzCGIg" target="_blank"><img src="images/minhas-metas.png" class="card-img-top" alt="Minhas Metas"></a></div>
                             <div class="col"><a href="https://www.perplexity.ai/collections/inicie-sua-jornada-2u7pYJ.tRc6iYAl52pOrgw" target="_blank"><img src="images/inicie-sua-jornada.png" class="card-img-top" alt="Inicie sua Jornada"></a></div>
                             <div class="col"><a href="https://www.perplexity.ai/collections/eu-indico-sfdD12b2RXKv5eizGte4kA" target="_blank"><img src="images/eu-indico.png" class="card-img-top" alt="eu indico"></a></div>
-                            <div class="col"><a href="https://www.perplexity.ai/collections/novos-desafios-02_KGT5mQA.u8jwbmtFeDw" target="_blank"><img src="images/novos-desafios.png" class="card-img-top" alt="Novos Desafios"></a></div>
                         </div>
                     </div>
+
+                    <div class="carousel-item">
+                        <div class="row row-cols-lg-5 row-cols-md-4 row-cols-sm-3 row-cols-2 g-3">
+                           <div class="col"><a href="https://www.perplexity.ai/collections/novos-desafios-02_KGT5mQA.u8jwbmtFeDw" target="_blank"><img src="images/novos-desafios.png" class="card-img-top" alt="Novos Desafios"></a></div>
+                           </div>
+                    </div>
+                    
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselAjudinha" data-bs-slide="prev"><span class="carousel-control-prev-icon" aria-hidden="true"></span></button>
                 <button class="carousel-control-next" type="button" data-bs-target="#carouselAjudinha" data-bs-slide="next"><span class="carousel-control-next-icon" aria-hidden="true"></span></button>
