--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <main class="container">
 
         <section class="mb-5">
-            <h2 class="mb-3">Porque você assistiu: Querida, encolhi o conteúdo</h2>
+            <h2 class="mb-3">Adicionados recentemente</h2>
             <div id="carouselAjudinha" class="carousel slide">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
@@ -108,7 +108,7 @@
         </section>
 
         <section class="mb-5">
-            <h2 class="mb-3">Porque você assistiu: Apertem os cintos, o conteudista sumiu</h2>
+            <h2 class="mb-3">Onde Nascem as Ideias: Nosso Catálogo de Recursos.</h2>
             <div id="carousel2" class="carousel slide">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
@@ -132,7 +132,7 @@
         </section>
 
         <section class="mb-5">
-            <h2 class="mb-3">Com base nas dúvidas recentes</h2>
+            <h2 class="mb-3">Mapa da Mina do Conteúdo & Design: Seus Manuais Essenciais de Design</h2>
             <div id="carousel3" class="carousel slide">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
@@ -156,7 +156,7 @@
         </section>
 
         <section class="mb-5">
-            <h2 class="mb-3">Cinema Nacional</h2>
+            <h2 class="mb-3">Assista Novamente</h2>
             <div id="carousel4" class="carousel slide">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
