--- a/index.html
+++ b/index.html
@@ -113,16 +113,16 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <div class="row row-cols-lg-5 row-cols-md-4 row-cols-sm-3 row-cols-2 g-3">
-                            <div class="col"><a href="https://www.perplexity.ai/collections/descricao-da-imagem-jbyWzxcpQdqqWqRYCclwPg" target="_blank"><img src="images/descricao-de-imagens.png" class="card-img-top" alt="DESCRIÇÃO DE IMAGEM"></a></div>
-                            <div class="col"><a href="https://www.perplexity.ai/collections/formatacao-de-formulas-CyFZHBSwQiCgjt4vt6YTVg" target="_blank"><img src="images/formatacao-de-formulas.png" class="card-img-top" alt="Formatação de fórmulas"></a></div>
-                            <div class="col"><a href="https://www.perplexity.ai/collections/minhas-metas-KTFH54OjRRG4E5rEjzCGIg" target="_blank"><img src="images/minhas-metas.png" class="card-img-top" alt="Minhas Metas"></a></div>
-                            <div class="col"><a href="https://www.perplexity.ai/collections/inicie-sua-jornada-2u7pYJ.tRc6iYAl52pOrgw" target="_blank"><img src="images/inicie-sua-jornada.png" class="card-img-top" alt="Inicie sua Jornada"></a></div>
-                            <div class="col"><a href="https://www.perplexity.ai/collections/eu-indico-sfdD12b2RXKv5eizGte4kA" target="_blank"><img src="images/eu-indico.png" class="card-img-top" alt="eu indico"></a></div>
+                            <div class="col"><a href="https://www.perplexity.ai/collections/dialogo-uM3OMFgwRRWj5Me7VGcVtg" target="_blank"><img src="images/descricao-de-imagens.png" class="card-img-top" alt="DESCRIÇÃO DE IMAGEM"></a></div>
+                            <div class="col"><a href="https://www.perplexity.ai/collections/assinalar-XZ2pvQp5SueRKUFSUHfO6A" target="_blank"><img src="images/formatacao-de-formulas.png" class="card-img-top" alt="Formatação de fórmulas"></a></div>
+                            <div class="col"><a href="https://www.perplexity.ai/collections/complete-as-lacunas-1VMiUlTgRnyUXTJz0feZLQ" target="_blank"><img src="images/minhas-metas.png" class="card-img-top" alt="Minhas Metas"></a></div>
+                            <div class="col"><a href="https://www.perplexity.ai/collections/cards-iw4HjAiIRhK7JWMNpHHJ0g" target="_blank"><img src="images/inicie-sua-jornada.png" class="card-img-top" alt="Inicie sua Jornada"></a></div>
+                            <div class="col"><a href="https://www.perplexity.ai/collections/arrasta-e-solta-uYj4ImCiTE6moOEFA_I3Ng" target="_blank"><img src="images/eu-indico.png" class="card-img-top" alt="eu indico"></a></div>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <div class="row row-cols-lg-5 row-cols-md-4 row-cols-sm-3 row-cols-2 g-3">
-                           <div class="col"><a href="https://www.perplexity.ai/collections/novos-desafios-02_KGT5mQA.u8jwbmtFeDw" target="_blank"><img src="images/novos-desafios.png" class="card-img-top" alt="Novos Desafios"></a></div>
+                           <div class="col"><a href="https://www.perplexity.ai/collections/tabuleiro-_1CiebUMRia1CXvcdXwC.A" target="_blank"><img src="images/novos-desafios.png" class="card-img-top" alt="Novos Desafios"></a></div>
                         </div>
                     </div>
                 </div>
