--- a/index.html
+++ b/index.html
@@ -123,16 +123,16 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <div class="row row-cols-lg-5 row-cols-md-4 row-cols-sm-3 row-cols-2 g-3">
-                            <div class="col"><a href="https://www.perplexity.ai/collections/descricao-da-imagem-jbyWzxcpQdqqWqRYCclwPg" target="_blank"><img src="images/descricao-de-imagens.png" class="card-img-top" alt="DESCRIÇÃO DE IMAGEM"></a></div>
-                            <div class="col"><a href="https://www.perplexity.ai/collections/formatacao-de-formulas-CyFZHBSwQiCgjt4vt6YTVg" target="_blank"><img src="images/formatacao-de-formulas.png" class="card-img-top" alt="Formatação de fórmulas"></a></div>
-                            <div class="col"><a href="https://www.perplexity.ai/collections/minhas-metas-KTFH54OjRRG4E5rEjzCGIg" target="_blank"><img src="images/minhas-metas.png" class="card-img-top" alt="Minhas Metas"></a></div>
-                            <div class="col"><a href="https://www.perplexity.ai/collections/inicie-sua-jornada-2u7pYJ.tRc6iYAl52pOrgw" target="_blank"><img src="images/inicie-sua-jornada.png" class="card-img-top" alt="Inicie sua Jornada"></a></div>
-                            <div class="col"><a href="https://www.perplexity.ai/collections/descricao-de-partitura-musical-GAHc5NxORgaSa6A6rpP8bg" target="_blank"><img src="images/eu-indico.png" class="card-img-top" alt="Descrição de Partituras"></a></div>
+                            <div class="col"><a href="https://www.perplexity.ai/collections/descricao-da-imagem-jbyWzxcpQdqqWqRYCclwPg" target="_blank"><img src="images/descricao.png" class="card-img-top" alt="DESCRIÇÃO DE IMAGEM"></a></div>
+                            <div class="col"><a href="https://www.perplexity.ai/collections/formatacao-de-formulas-CyFZHBSwQiCgjt4vt6YTVg" target="_blank"><img src="images/formulas.png" class="card-img-top" alt="Formatação de fórmulas"></a></div>
+                            <div class="col"><a href="https://www.perplexity.ai/collections/minhas-metas-KTFH54OjRRG4E5rEjzCGIg" target="_blank"><img src="images/metas.png" class="card-img-top" alt="Minhas Metas"></a></div>
+                            <div class="col"><a href="https://www.perplexity.ai/collections/inicie-sua-jornada-2u7pYJ.tRc6iYAl52pOrgw" target="_blank"><img src="images/jornada.png" class="card-img-top" alt="Inicie sua Jornada"></a></div>
+                            <div class="col"><a href="https://www.perplexity.ai/collections/descricao-de-partitura-musical-GAHc5NxORgaSa6A6rpP8bg" target="_blank"><img src="images/partituras.png" class="card-img-top" alt="Descrição de Partituras"></a></div>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <div class="row row-cols-lg-5 row-cols-md-4 row-cols-sm-3 row-cols-2 g-3">
-                           <div class="col"><a href="https://www.perplexity.ai/collections/novos-desafios-02_KGT5mQA.u8jwbmtFeDw" target="_blank"><img src="images/novos-desafios.png" class="card-img-top" alt="Novos Desafios"></a></div>
+                           <div class="col"><a href="https://www.perplexity.ai/collections/novos-desafios-02_KGT5mQA.u8jwbmtFeDw" target="_blank"><img src="images/desafios.png" class="card-img-top" alt="Novos Desafios"></a></div>
                         </div>
                     </div>
                 </div>
@@ -147,16 +147,16 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <div class="row row-cols-lg-5 row-cols-md-4 row-cols-sm-3 row-cols-2 g-3">
-                            <div class="col"><a href="https://www.perplexity.ai/collections/dialogo-uM3OMFgwRRWj5Me7VGcVtg" target="_blank"><img src="images/descricao-de-imagens.png" class="card-img-top" alt="Dialogo"></a></div>
-                            <div class="col"><a href="https://www.perplexity.ai/collections/assinalar-XZ2pvQp5SueRKUFSUHfO6A" target="_blank"><img src="images/formatacao-de-formulas.png" class="card-img-top" alt="Assinalar"></a></div>
-                            <div class="col"><a href="https://www.perplexity.ai/collections/complete-as-lacunas-1VMiUlTgRnyUXTJz0feZLQ" target="_blank"><img src="images/minhas-metas.png" class="card-img-top" alt="Complete as Lacunas"></a></div>
-                            <div class="col"><a href="https://www.perplexity.ai/collections/cards-iw4HjAiIRhK7JWMNpHHJ0g" target="_blank"><img src="images/inicie-sua-jornada.png" class="card-img-top" alt="Cards"></a></div>
-                            <div class="col"><a href="https://www.perplexity.ai/collections/arrasta-e-solta-uYj4ImCiTE6moOEFA_I3Ng" target="_blank"><img src="images/eu-indico.png" class="card-img-top" alt="Arrasta e Solta"></a></div>
+                            <div class="col"><a href="https://www.perplexity.ai/collections/dialogo-uM3OMFgwRRWj5Me7VGcVtg" target="_blank"><img src="images/dialogo.png" class="card-img-top" alt="Dialogo"></a></div>
+                            <div class="col"><a href="https://www.perplexity.ai/collections/assinalar-XZ2pvQp5SueRKUFSUHfO6A" target="_blank"><img src="images/assinalar.png" class="card-img-top" alt="Assinalar"></a></div>
+                            <div class="col"><a href="https://www.perplexity.ai/collections/complete-as-lacunas-1VMiUlTgRnyUXTJz0feZLQ" target="_blank"><img src="lacunas.png" class="card-img-top" alt="Complete as Lacunas"></a></div>
+                            <div class="col"><a href="https://www.perplexity.ai/collections/cards-iw4HjAiIRhK7JWMNpHHJ0g" target="_blank"><img src="images/cards.png" class="card-img-top" alt="Cards"></a></div>
+                            <div class="col"><a href="https://www.perplexity.ai/collections/arrasta-e-solta-uYj4ImCiTE6moOEFA_I3Ng" target="_blank"><img src="images/arrasta.png" class="card-img-top" alt="Arrasta e Solta"></a></div>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <div class="row row-cols-lg-5 row-cols-md-4 row-cols-sm-3 row-cols-2 g-3">
-                           <div class="col"><a href="https://sites.google.com/unicesumar.com.br/tabuleiro-_1CiebUMRia1CXvcdXwC.A" target="_blank"><img src="images/novos-desafios.png" class="card-img-top" alt="Tabuleiro"></a></div>
+                           <div class="col"><a href="https://www.perplexity.ai/collections/tabuleiro-_1CiebUMRia1CXvcdXwC.A" target="_blank"><img src="images/tabuleiro.png" class="card-img-top" alt="Tabuleiro"></a></div>
                         </div>
                     </div>
                 </div>
@@ -171,18 +171,18 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <div class="row row-cols-lg-5 row-cols-md-4 row-cols-sm-3 row-cols-2 g-3">
-                            <div class="col"><a href="https://sites.google.com/unicesumar.com.br/recursos-interativos/in%C3%ADcio" target="_blank"><img src="images/descricao-de-imagens.png" class="card-img-top" alt="Recursos Interativos"></a></div>
-                            <div class="col"><a href="https://vitru-digital.web.app/explora-recursos/" target="_blank"><img src="images/formatacao-de-formulas.png" class="card-img-top" alt="Explora Recursos"></a></div>
-                            <div class="col"><a href="https://sites.google.com/unicesumar.com.br/guia-de-ferramentas-ia/in%C3%ADcio" target="_blank"><img src="images/minhas-metas.png" class="card-img-top" alt="Guia de Ferramentas DE's"></a></div>
-                            <div class="col"><a href="https://app.powerbi.com/view?r=eyJrIjoiZGYxZTQ3ZWQtZjUyMS00N2I1LTgyMGItZDEwZWFiODQyYzc4IiwidCI6ImIwZTczMzVmLWZkMWYtNDZhZC05OGM3LTU1ZTZlNGUyMjJlYSJ9&disablecdnExpiration=1745381102" target="_blank"><img src="images/inicie-sua-jornada.png" class="card-img-top" alt="Acervo Vitru"></a></div>
-                            <div class="col"><a href="https://livrodigital.uniasselvi.com.br/disciplina/manual_de/guia/inicio.html" target="_blank"><img src="images/eu-indico.png" class="card-img-top" alt="eu indico"></a></div>
+                            <div class="col"><a href="https://sites.google.com/unicesumar.com.br/recursos-interativos/in%C3%ADcio" target="_blank"><img src="images/novos.png" class="card-img-top" alt="Recursos Interativos"></a></div>
+                            <div class="col"><a href="https://vitru-digital.web.app/explora-recursos/" target="_blank"><img src="images/explora.png" class="card-img-top" alt="Explora Recursos"></a></div>
+                            <div class="col"><a href="https://sites.google.com/unicesumar.com.br/guia-de-ferramentas-ia/in%C3%ADcio" target="_blank"><img src="images/guia.png" class="card-img-top" alt="Guia de Ferramentas DE's"></a></div>
+                            <div class="col"><a href="https://app.powerbi.com/view?r=eyJrIjoiZGYxZTQ3ZWQtZjUyMS00N2I1LTgyMGItZDEwZWFiODQyYzc4IiwidCI6ImIwZTczMzVmLWZkMWYtNDZhZC05OGM3LTU1ZTZlNGUyMjJlYSJ9&disablecdnExpiration=1745381102" target="_blank"><img src="images/acervo.png" class="card-img-top" alt="Acervo Vitru"></a></div>
+                            <div class="col"><a href="https://livrodigital.uniasselvi.com.br/disciplina/manual_de/guia/inicio.html" target="_blank"><img src="images/manual.png" class="card-img-top" alt="eu indico"></a></div>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <div class="row row-cols-lg-5 row-cols-md-4 row-cols-sm-3 row-cols-2 g-3">
-                           <div class="col"><a href="https://sites.google.com/unicesumar.com.br/referencialescrita-wl/guia-de-escrita" target="_blank"><img src="images/novos-desafios.png" class="card-img-top" alt="Novos Desafios"></a></div>
-                           <div class="col"><a href="https://sites.google.com/unicesumar.com.br/organizador/metodologia-institucional?authuser=0" target="_blank"><img src="images/novos-desafios.png" class="card-img-top" alt="Novos Desafios"></a></div>
-                            <div class="col"><a href="https://sites.google.com/unicesumar.com.br/referencialdeescritapos/guia-de-escrita" target="_blank"><img src="images/novos-desafios.png" class="card-img-top" alt="Novos Desafios"></a></div>
+                           <div class="col"><a href="https://sites.google.com/unicesumar.com.br/referencialescrita-wl/guia-de-escrita" target="_blank"><img src="images/label.png" class="card-img-top" alt="Novos Desafios"></a></div>
+                           <div class="col"><a href="https://sites.google.com/unicesumar.com.br/organizador/metodologia-institucional?authuser=0" target="_blank"><img src="images/cross.png" class="card-img-top" alt="Novos Desafios"></a></div>
+                            <div class="col"><a href="https://sites.google.com/unicesumar.com.br/referencialdeescritapos/guia-de-escrita" target="_blank"><img src="images/pos.png" class="card-img-top" alt="Novos Desafios"></a></div>
                         </div>
                     </div>
                 </div>
@@ -197,16 +197,38 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <div class="row row-cols-lg-5 row-cols-md-4 row-cols-sm-3 row-cols-2 g-3">
-                            <div class="col"><a href="https://drive.google.com/file/d/1XTiINiU26h5OYo3xkaSYcQKLmi1hIeCp/view?usp=drive_link" target="_blank"><img src="images/descricao-de-imagens.png" class="card-img-top" alt="DESCRIÇÃO DE IMAGEM"></a></div>
-                            <div class="col"><a href="https://drive.google.com/file/d/1XXgjMgWrcClkLwnuZiu2YkmNWFj1l_f8/view?usp=drive_link" target="_blank"><img src="images/formatacao-de-formulas.png" class="card-img-top" alt="Formatação de fórmulas"></a></div>
-                            <div class="col"><a href="https://drive.google.com/file/d/1ACb7LvwFrrXzmK6s2jw3bnUEE3tcf9_w/view?usp=drive_link" target="_blank"><img src="images/minhas-metas.png" class="card-img-top" alt="Minhas Metas"></a></div>
-                            <div class="col"><a href="https://drive.google.com/file/d/1WhTHL2-oC95G_pSyaTFXlm3K0BzQWxc1/view?usp=drive_link" target="_blank"><img src="images/inicie-sua-jornada.png" class="card-img-top" alt="Inicie sua Jornada"></a></div>
-                            <div class="col"><a href="" target="_blank"><img src="images/tour-museu.png" class="card-img-top" alt="Tour Museu"></a></div>
+                            <div class="col"><a href="https://drive.google.com/file/d/1XTiINiU26h5OYo3xkaSYcQKLmi1hIeCp/view?usp=drive_link" target="_blank"><img src="images/orientacoes.png" class="card-img-top" alt="DESCRIÇÃO DE IMAGEM"></a></div>
+                            <div class="col"><a href="https://drive.google.com/file/d/1XXgjMgWrcClkLwnuZiu2YkmNWFj1l_f8/view?usp=drive_link" target="_blank"><img src="images/ciaed.png" class="card-img-top" alt="Formatação de fórmulas"></a></div>
+                            <div class="col"><a href="https://drive.google.com/file/d/1ACb7LvwFrrXzmK6s2jw3bnUEE3tcf9_w/view?usp=drive_link" target="_blank"><img src="images/design.png" class="card-img-top" alt="Minhas Metas"></a></div>
+                            <div class="col"><a href="https://drive.google.com/file/d/1WhTHL2-oC95G_pSyaTFXlm3K0BzQWxc1/view?usp=drive_link" target="_blank"><img src="images/ciaed.png" class="card-img-top" alt="Inicie sua Jornada"></a></div>
+                            <div class="col"><img src="images/tour-museu.png" class="card-img-top" alt="Tour Museu"></div>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <div class="row row-cols-lg-5 row-cols-md-4 row-cols-sm-3 row-cols-2 g-3">
-                           <div class="col"><a href="https://www.perplexity.ai/collections/novos-desafios-02_KGT5mQA.u8jwbmtFeDw" target="_blank"><img src="images/novos-desafios.png" class="card-img-top" alt="Novos Desafios"></a></div>
+                           <div class="col"><a href="https://design-educacionalvtr.github.io/recursos-IA/" target="_blank"><img src="images/repositorio.png" class="card-img-top" alt="Novos Desafios"></a></div>
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carousel4" data-bs-slide="prev"><span class="carousel-control-prev-icon" aria-hidden="true"></span></button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carousel4" data-bs-slide="next"><span class="carousel-control-next-icon" aria-hidden="true"></span></button>
+            </div>
+        </section>
+
+     <section class="mb-5">
+            <h2 class="mb-3">Assista Novamente</h2>
+            <div id="carousel4" class="carousel slide">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <div class="row row-cols-lg-5 row-cols-md-4 row-cols-sm-3 row-cols-2 g-3">
+                            <div class="col"><img src="images/2026-1.png" class="card-img-top" alt="Módulo 2026/1"></div>
+                             <div class="col"><img src="images/51-2026.png" class="card-img-top" alt="Módulo 51/2026"></div>
+                             <div class="col"><img src="images/52-2026.png" class="card-img-top" alt="Módulo 52/2026"></div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="row row-cols-lg-5 row-cols-md-4 row-cols-sm-3 row-cols-2 g-3">
+                           <div class="col"><a href="https://design-educacionalvtr.github.io/recursos-IA/" target="_blank"><img src="images/repositorio.png" class="card-img-top" alt="Novos Desafios"></a></div>
                         </div>
                     </div>
                 </div>
