--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                         <div class="row row-cols-lg-5 row-cols-md-4 row-cols-sm-3 row-cols-2 g-3">
                             <div class="col"><a href="https://www.perplexity.ai/collections/dialogo-uM3OMFgwRRWj5Me7VGcVtg" target="_blank"><img src="images/dialogo.png" class="card-img-top" alt="Dialogo"></a></div>
                             <div class="col"><a href="https://www.perplexity.ai/collections/assinalar-XZ2pvQp5SueRKUFSUHfO6A" target="_blank"><img src="images/assinalar.png" class="card-img-top" alt="Assinalar"></a></div>
-                            <div class="col"><a href="https://www.perplexity.ai/collections/complete-as-lacunas-1VMiUlTgRnyUXTJz0feZLQ" target="_blank"><img src="lacunas.png" class="card-img-top" alt="Complete as Lacunas"></a></div>
+                            <div class="col"><a href="https://www.perplexity.ai/collections/complete-as-lacunas-1VMiUlTgRnyUXTJz0feZLQ" target="_blank"><img src="images/lacunas.png" class="card-img-top" alt="Complete as Lacunas"></a></div>
                             <div class="col"><a href="https://www.perplexity.ai/collections/cards-iw4HjAiIRhK7JWMNpHHJ0g" target="_blank"><img src="images/cards.png" class="card-img-top" alt="Cards"></a></div>
                             <div class="col"><a href="https://www.perplexity.ai/collections/arrasta-e-solta-uYj4ImCiTE6moOEFA_I3Ng" target="_blank"><img src="images/arrasta.png" class="card-img-top" alt="Arrasta e Solta"></a></div>
                         </div>
@@ -216,7 +216,7 @@
         </section>
 
      <section class="mb-5">
-            <h2 class="mb-3">Assista Novamente</h2>
+            <h2 class="mb-3">Expiram em breve</h2>
             <div id="carousel4" class="carousel slide">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
