--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
         </section>
 
         <section class="mb-5">
-            <h2 class="mb-3">Mapa da Mina do Conteúdo & Design: Seus Manuais Essenciais de Design</h2>
+            <h2 class="mb-3">Mapa da Mina: Manuais para o Design Educacional</h2>
             <div id="carousel3" class="carousel slide">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
