--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                             <div class="col"><a href="https://drive.google.com/file/d/1XTiINiU26h5OYo3xkaSYcQKLmi1hIeCp/view?usp=drive_link" target="_blank"><img src="images/orientacoes.png" class="card-img-top" alt="DESCRIÇÃO DE IMAGEM"></a></div>
                             <div class="col"><a href="https://drive.google.com/file/d/1XXgjMgWrcClkLwnuZiu2YkmNWFj1l_f8/view?usp=drive_link" target="_blank"><img src="images/ciaed.png" class="card-img-top" alt="Formatação de fórmulas"></a></div>
                             <div class="col"><a href="https://drive.google.com/file/d/1ACb7LvwFrrXzmK6s2jw3bnUEE3tcf9_w/view?usp=drive_link" target="_blank"><img src="images/design.png" class="card-img-top" alt="Minhas Metas"></a></div>
-                            <div class="col"><a href="https://drive.google.com/file/d/1WhTHL2-oC95G_pSyaTFXlm3K0BzQWxc1/view?usp=drive_link" target="_blank"><img src="images/ciaed.png" class="card-img-top" alt="Inicie sua Jornada"></a></div>
+                            <div class="col"><a href="https://drive.google.com/file/d/1WhTHL2-oC95G_pSyaTFXlm3K0BzQWxc1/view?usp=drive_link" target="_blank"><img src="images/checklist.png" class="card-img-top" alt="Inicie sua Jornada"></a></div>
                             <div class="col"><img src="images/tour-museu.png" class="card-img-top" alt="Tour Museu"></div>
                         </div>
                     </div>
